# zine

./: CLAUDE.md  Cargo.toml
.claude/: settings.json
src/: game_state.rs  main.rs
src/camera/: mod.rs  systems.rs
src/character/: mod.rs
src/menu/: components.rs  mod.rs  notification.rs  styles.rs  systems.rs
src/network/: client.rs  discovery.rs  mod.rs  protocol.rs  server.rs
src/player/: components.rs  mod.rs  systems.rs
src/screen/: audio_capture.rs  audio_decoder.rs  audio_encoder.rs  capture.rs  mod.rs  share_ui.rs  streaming.rs  video_decoder.rs  video_encoder.rs  window_capture.rs
src/world/: components.rs  crosshair.rs  interaction.rs  mod.rs  setup.rs
