[package]
name = "zine"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
scrap = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
jpeg-encoder = "0.6"
# FFmpeg is used via CLI (ffmpeg.exe must be in PATH)

# Windows-specific dependencies for window capture
[target.'cfg(windows)'.dependencies]
win-screenshot = "4.0"
winapi = { version = "0.3", features = ["winuser", "dwmapi", "winsock2"] }

# Enable optimizations for better runtime performance in dev
[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3
