[package]
name = "zine"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
scrap = "0.5"
openh264 = "0.6"

# Windows-specific dependencies for window capture
[target.'cfg(windows)'.dependencies]
windows-capture = "1.4"
winapi = { version = "0.3", features = ["winuser", "dwmapi", "winsock2"] }

# Enable optimizations for better runtime performance in dev
[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3
