[package]
name = "zine"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
scrap = "0.5"
openh264 = "0.6"
# Audio capture and playback
cpal = "0.15"
# Ring buffer for audio
ringbuf = "0.4"

# Windows-specific dependencies for window capture
[target.'cfg(windows)'.dependencies]
windows-capture = "1.4"
winapi = { version = "0.3", features = ["winuser", "dwmapi", "winsock2"] }
# Windows audio loopback capture
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

# Enable optimizations for better runtime performance in dev
[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3
